--- a/index.html
+++ b/index.html
@@ -3,17 +3,160 @@
 	
 <head>
 	<meta charset="UTF-8">
-	<meta name="author" content="jouw naam">
+	<meta name="author" content="Aishani Bissesar">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	
-	<title>Howdy FED2324</title>
+	<title>Startpagina Starbucks</title>
 	
 	<link href="styles/style.css" rel="stylesheet">
 	<link rel="icon" type="image/svg+xml" href="images/favicon.svg">
 </head>
 
 <body>
-	<h1>Howdy FED2324</h1>
+	<header>
+		<h1>
+			<img class="img-starbuckslogo" src="images/starbuckslogo.png" alt="Starbucks Logo">
+		</h1>
+		<button>Menu</button>
+		<nav>
+			<ul>
+				<li>
+					<a href="menu.html">Menu</a>
+				</li>
+				<li>
+					<a href="ourcoffees.html">Our Coffees</a>
+				</li>
+				<li>
+					<a href="bezorging.html">Bezorging</a>
+				</li>
+				<li>
+					<a href="verantwoordelijkheid.html">Verantwoordelijkheid</a>
+				</li>
+				<li>
+					<a href="carriere.html">Carriere</a>
+				</li>
+				<li>
+					<a href="findastore.html">Find a store</a>
+				</li>
+				<li>
+					<a href="nl.html">NL</a>
+				</li>
+			</ul>
+		</nav>
+	</header>
+	
+	<main>
+		<section>
+			<img class="img-geefstarbuckscadeau" src="images/geefstarbuckscadeau.png" alt="Geef Starbucks Cadeau">
+			<button>Bestel nu</button>
+			<button>Vind jouw dichtsbijzijnde locatie</button>
+		</section>
+		<section>
+			<img class="img-meetupseason" src="images/meetupseason.png" alt="Meetup Season">
+			<h2>
+				Het is Meetup seizoen bij Starbucks! 🎄
+			</h2>
+			<p>
+				Onze iconische feestdagen drankjes zijn terug. Kom in de feeststemming met onze Gingerbread Latte, Toffee Nut Latte en Stroopwafel Latte dit seizoen. 
+				Klaar voor een traktatie? De iconische klassiekers zijn niet de enige drankjes die terug zijn - we hebben voor een limited time only ook de kersverse Hazelnut Chocolate Crunch Hot Chocolate beschikbaar. Ontdek de nieuwe smaken in onze winkels! 🍰
+				Limited edition en exclusief verkrijgbaar bij Starbucks.
+				Bestel nu rechtstreeks aan je deur via Uber Eats of Thuisbezorgd.
+			</p>
+		</section>
+		<section>
+			<p>
+				JOUW FAVORIETEN BEZORGD AAN HUIS!
+			</p>
+			<img class="img-starbucksdelivers" src="images/starbucksdelivers.png" alt="Starbucks Delivers">
+			<h2>
+				Starbucks® Delivers
+			</h2>
+			<p>
+				Geniet van al je favorieten aan en knus op je bank terwijl je je favoriete serie bingewatcht. 
+				We bezorgen tot aan je deur, zodat je kunt genieten van je Iced Latte of Caramel Frappuccino in de comfort van je eigen huis.
+			</p>
+			<button>Bestel nu</button>
+		</section>
+		<section>
+			<article>
+				<img class="img-starbuckssustainability" src="images/starbuckssustainability.jpeg" alt="Starbucks Sustainability">
+				<h3>Embracing sustainability</h3>
+				<p>Vanaf 1 juli 2023 brengen we kosten in rekening voor alle wegwerp items gemaakt van plastic. Go Green 💚</p>
+			  	<button>Ontdek meer</button>
+			</article>
+			<article>
+				<img class="img-starbucksverhalen" src="images/starbucksverhalen.jpeg" alt="Starbucks Verhalen">
+				<h3>Starbucks Verhalen</h3>
+				<p>Blijf op de hoogte van onze laatste Starbucks verhalen en nieuws.</p>
+			  	<button>Ontdek meer</button>
+			</article>
+			<article>
+				<img class="img-starbucksoverons" src="images/starbucksoverons.jpeg" alt="Starbucks Over Ons">
+				<h3>Over ons</h3>
+				<p>Ontdek meer over ons bedrijf en geschiedenis.</p>
+			  	<button>Ontdek meer</button>
+			</article>
+			<article>
+				<img class="img-starbucksbezorgd" src="images/starbucksbezorgd.jpeg" alt="Starbucks Bezorgd">
+				<h3>Starbucks® Bezorgd</h3>
+				<p>Genieten van je favoriete Starbucks® drankjes vanuit het comfort van je huis is dichterbij dan je zou denken. Het is de koffie die je kent en waar je van houdt, in je favoriete mok. Kijk of bezorging bij jou in de buurt mogelijk is. Start je bestelling om je Starbucks® favorieten te laten bezorgen via Uber Eats en Thuisbezorgd.</p>
+			  	<button>Bestel nu</button>
+			</article>
+		</section>
+	</main>
+	<footer>
+		<section>
+			<ul>
+				<h2>Over ons</h2>
+				<li>
+					<a href="overons.html">Over ons</a>
+				</li>
+				<li>
+					<a href="onzekoffies.html">Onze koffies</a>
+				</li>
+				<li>
+					<a href="starbucksverhalen&nieuws.html">Starbucks Verhalen & Nieuws</a>
+				</li>
+				<li>
+					<a href="starbucksreadytodrink.html">Starbucks Ready to Drink</a>
+				</li>
+				<li>
+					<a href="zuivelalternatieven.html">Zuivelalternatieven</a>
+				</li>
+			</ul>
+		</section>
+		<section>
+			<ul>
+				<h2>Contact</h2>
+				<li>
+					<a href="werkenbijstarbucks.html">Werken bij Starbucks</a>
+				</li>
+				<li>
+					<a href="contact.html">Contact</a>
+				</li>
+			</ul>
+		</section>
+		<section>
+			<ul>
+				<h2>Sociale Impact</h2>
+				<li>
+					<a href="verantwoordelijkheid.html">Verantwoordelijkheid</a>
+				</li>
+				<li>
+					<a href="embracingsustainability.html">Embracing Sustainability</a>
+				</li>
+			</ul>
+		</section>
+		<section>
+			<img class="img-socialmedia" src="images/socialmedia.png" alt="Social Media">
+		</section>
+		<section>
+			<p>Privacy Policy</p>
+			<p>Terms of Use</p>
+			<p>Cookie Policy</p>
+		</section>
+		
+	</footer>
 
 	<script defer src="scripts/script.js"></script>
 </body>
