--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
 	
 	<title>Startpagina Starbucks</title>
 	
-	<link href="styles/style.css" rel="stylesheet">
+	<link href="styles/index.css" rel="stylesheet">
 	<link rel="icon" type="image/svg+xml" href="images/favicon.svg">
+	<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500&display=swap" rel="stylesheet">
 </head>
+
 
 <body>
 	<header>
@@ -48,8 +50,14 @@
 	<main>
 		<section>
 			<img class="img-geefstarbuckscadeau" src="images/geefstarbuckscadeau.png" alt="Geef Starbucks Cadeau">
-			<button>Bestel nu</button>
-			<button>Vind jouw dichtsbijzijnde locatie</button>
+			<ul>
+				<li>
+					<a href="bestelnu.html">Bestel nu</a>
+				</li>
+				<li>
+					<a href="locatie.html">Vind jouw dichtsbijzijnde locatie</a>
+				</li>
+			</ul>
 		</section>
 		<section>
 			<img class="img-meetupseason" src="images/meetupseason.png" alt="Meetup Season">
