--- a/index.html
+++ b/index.html
@@ -65,25 +65,36 @@
 				Het is Meetup seizoen bij Starbucks! 🎄
 			</h2>
 			<p>
-				Onze iconische feestdagen drankjes zijn terug. Kom in de feeststemming met onze Gingerbread Latte, Toffee Nut Latte en Stroopwafel Latte dit seizoen. 
+				Onze iconische feestdagen drankjes zijn terug. Kom in de feeststemming met onze Gingerbread Latte, Toffee Nut Latte en Stroopwafel Latte dit seizoen.
+				<br>
+				<br>
 				Klaar voor een traktatie? De iconische klassiekers zijn niet de enige drankjes die terug zijn - we hebben voor een limited time only ook de kersverse Hazelnut Chocolate Crunch Hot Chocolate beschikbaar. Ontdek de nieuwe smaken in onze winkels! 🍰
+				<br>
+				<br>
 				Limited edition en exclusief verkrijgbaar bij Starbucks.
+				<br>
+				<br>
 				Bestel nu rechtstreeks aan je deur via Uber Eats of Thuisbezorgd.
+				<br>
 			</p>
 		</section>
 		<section>
 			<p>
-				JOUW FAVORIETEN BEZORGD AAN HUIS!
+				<span>JOUW FAVORIETEN BEZORGD AAN HUIS!</span>
 			</p>
 			<img class="img-starbucksdelivers" src="images/starbucksdelivers.png" alt="Starbucks Delivers">
 			<h2>
 				Starbucks® Delivers
 			</h2>
 			<p>
-				Geniet van al je favorieten aan en knus op je bank terwijl je je favoriete serie bingewatcht. 
+				Geniet van al je favorieten aan en knus op je bank terwijl je je favoriete serie bingewatcht.
+			<br>
+			<br>
 				We bezorgen tot aan je deur, zodat je kunt genieten van je Iced Latte of Caramel Frappuccino in de comfort van je eigen huis.
 			</p>
 			<button>Bestel nu</button>
+			<br>
+			<br>
 		</section>
 		<section>
 			<article>
@@ -92,20 +103,23 @@
 				<p>Vanaf 1 juli 2023 brengen we kosten in rekening voor alle wegwerp items gemaakt van plastic. Go Green 💚</p>
 			  	<button>Ontdek meer</button>
 			</article>
+			<br>
 			<article>
 				<img class="img-starbucksverhalen" src="images/starbucksverhalen.jpeg" alt="Starbucks Verhalen">
 				<h3>Starbucks Verhalen</h3>
 				<p>Blijf op de hoogte van onze laatste Starbucks verhalen en nieuws.</p>
 			  	<button>Ontdek meer</button>
 			</article>
+			<br>
 			<article>
-				<img class="img-starbucksoverons" src="images/starbucksoverons.jpeg" alt="Starbucks Over Ons">
+				<img class="img-starbucksoverons" src="images/starbucksoverons(1).png" alt="Starbucks Over Ons">
 				<h3>Over ons</h3>
 				<p>Ontdek meer over ons bedrijf en geschiedenis.</p>
 			  	<button>Ontdek meer</button>
 			</article>
+			<br>
 			<article>
-				<img class="img-starbucksbezorgd" src="images/starbucksbezorgd.jpeg" alt="Starbucks Bezorgd">
+				<img class="img-starbucksbezorgd" src="images/starbucksbezorgd(1).png" alt="Starbucks Bezorgd">
 				<h3>Starbucks® Bezorgd</h3>
 				<p>Genieten van je favoriete Starbucks® drankjes vanuit het comfort van je huis is dichterbij dan je zou denken. Het is de koffie die je kent en waar je van houdt, in je favoriete mok. Kijk of bezorging bij jou in de buurt mogelijk is. Start je bestelling om je Starbucks® favorieten te laten bezorgen via Uber Eats en Thuisbezorgd.</p>
 			  	<button>Bestel nu</button>
@@ -156,7 +170,9 @@
 			</ul>
 		</section>
 		<section>
-			<img class="img-socialmedia" src="images/socialmedia.png" alt="Social Media">
+			<img class="img-facebook" src="images/facebooklogo.png" alt="Facebook">
+			<img class="img-instagram" src="images/instagram.png" alt="Instagram">
+			<img class="img-tiktok" src="images/tiktok.png" alt="Tiktok">
 		</section>
 		<section>
 			<p>Privacy Policy</p>
