--- a/menu.html
+++ b/menu.html
@@ -8,7 +8,7 @@
 	
     <title>Starbucks Menu</title>
 
-    <link href="styles/index.css" rel="stylesheet">
+    <link href="styles/style.css" rel="stylesheet">
 	<link rel="icon" type="image/svg+xml" href="images/favicon.svg">
 </head>
 
