--- a/menu.html
+++ b/menu.html
@@ -50,8 +50,15 @@
     <main>
         <section>
             <img class="img-menufoto" src="images/menufotostarbuckswebsite.jpeg" alt="Menu Foto">
-			<button>Bestel nu</button>
-			<button>Vind jouw dichtsbijzijnde locatie</button>
+			<h2>MENU</h2>
+			<ul>
+				<li>
+					<a href="bestelnu.html">Bestel nu</a>
+				</li>
+				<li>
+					<a href="locatie.html">Vind jouw dichtsbijzijnde locatie</a>
+				</li>
+			</ul>
         </section>
         <section>
 			<h2>
