--- a/menu.html
+++ b/menu.html
@@ -50,7 +50,7 @@
     <main>
         <section>
             <img class="img-menufoto" src="images/menufotostarbuckswebsite.jpeg" alt="Menu Foto">
-			<h2>MENU</h2>
+			<h2>Menu</h2>
 			<ul>
 				<li>
 					<a href="bestelnu.html">Bestel nu</a>
@@ -73,13 +73,21 @@
 				<img class="img-ontdekonzedranken.jpeg" src="images/ontdekonzedranken.jpeg" alt="Ontdek onze dranken">
 				<h3>Ontdek onze dranken</h3>
 				<p>Van warm en romig tot koud en verfrissend, er is een hele wereld aan Starbucks®-dranken die je kunt ontdekken, proberen en van kunt genieten.</p>
-			  	<button>Dranken</button>
+				<ul>
+					<li>
+						<a href="dranken.html">Dranken</a>
+					</li>
+				</ul>
 			</article>
             <article>
 				<img class="img-ontdekwatlekkers" src="images/cheesecake.jpeg" alt="Starbucks eten">
 				<h3>Ontdek wat lekkers</h3>
 				<p>Onze gebakjes en sandwiches worden gemaakt met kwalitatieve en eenvoudige ingrediënten. Vraag onze barista's voor advies bij de beste smaak combinatie met jouw koffie.</p>
-			  	<button>Eten</button>
+				<ul>
+					<li>
+						<a href="eten.html">Eten</a>
+					</li>
+				</ul>
 			</article>
         </section>
         <section>
@@ -103,49 +111,51 @@
     </main>
     <footer>
 		<section>
-			<ul>
-				<h2>Over ons</h2>
-				<li>
-					<a href="overons.html">Over ons</a>
-				</li>
-				<li>
-					<a href="onzekoffies.html">Onze koffies</a>
-				</li>
-				<li>
-					<a href="starbucksverhalen&nieuws.html">Starbucks Verhalen & Nieuws</a>
-				</li>
-				<li>
-					<a href="starbucksreadytodrink.html">Starbucks Ready to Drink</a>
-				</li>
-				<li>
-					<a href="zuivelalternatieven.html">Zuivelalternatieven</a>
-				</li>
-			</ul>
+			<h2>Over ons</h2>
+				<ul>
+					<li>
+						<a href="overons.html">Over ons</a>
+					</li>
+					<li>
+						<a href="onzekoffies.html">Onze koffies</a>
+					</li>
+					<li>
+						<a href="starbucksverhalen&nieuws.html">Starbucks Verhalen & Nieuws</a>
+					</li>
+					<li>
+						<a href="starbucksreadytodrink.html">Starbucks Ready to Drink</a>
+					</li>
+					<li>
+						<a href="zuivelalternatieven.html">Zuivelalternatieven</a>
+					</li>
+				</ul>
 		</section>
         <section>
-			<ul>
-				<h2>Contact</h2>
-				<li>
-					<a href="werkenbijstarbucks.html">Werken bij Starbucks</a>
-				</li>
-				<li>
-					<a href="contact.html">Contact</a>
-				</li>
-			</ul>
+			<h2>Contact</h2>
+				<ul>
+					<li>
+						<a href="werkenbijstarbucks.html">Werken bij Starbucks</a>
+					</li>
+					<li>
+						<a href="contact.html">Contact</a>
+					</li>
+				</ul>
 		</section>
         <section>
-			<ul>
-				<h2>Sociale Impact</h2>
-				<li>
-					<a href="verantwoordelijkheid.html">Verantwoordelijkheid</a>
-				</li>
-				<li>
-					<a href="embracingsustainability.html">Embracing Sustainability</a>
-				</li>
-			</ul>
+			<h2>Sociale Impact</h2>
+				<ul>
+					<li>
+						<a href="verantwoordelijkheid.html">Verantwoordelijkheid</a>
+					</li>
+					<li>
+						<a href="embracingsustainability.html">Embracing Sustainability</a>
+					</li>
+				</ul>
 		</section>
         <section>
-			<img class="img-socialmedia" src="images/socialmedia.png" alt="Social Media">
+			<img class="img-facebook" src="images/facebooklogo.png" alt="Facebook">
+			<img class="img-instagram" src="images/instagram.png" alt="Instagram">
+			<img class="img-tiktok" src="images/tiktok.png" alt="Tiktok">
 		</section>
         <section>
 			<p>Privacy Policy</p>
