--- a/index.html
+++ b/index.html
@@ -66,16 +66,15 @@
 			</h2>
 			<p>
 				Onze iconische feestdagen drankjes zijn terug. Kom in de feeststemming met onze Gingerbread Latte, Toffee Nut Latte en Stroopwafel Latte dit seizoen.
-				<br>
-				<br>
+			</p>
+			<p>
 				Klaar voor een traktatie? De iconische klassiekers zijn niet de enige drankjes die terug zijn - we hebben voor een limited time only ook de kersverse Hazelnut Chocolate Crunch Hot Chocolate beschikbaar. Ontdek de nieuwe smaken in onze winkels! 🍰
-				<br>
-				<br>
+			</p>
+			<p>
 				Limited edition en exclusief verkrijgbaar bij Starbucks.
-				<br>
-				<br>
+			</p>
+			<p>
 				Bestel nu rechtstreeks aan je deur via Uber Eats of Thuisbezorgd.
-				<br>
 			</p>
 		</section>
 		<section>
@@ -88,86 +87,101 @@
 			</h2>
 			<p>
 				Geniet van al je favorieten aan en knus op je bank terwijl je je favoriete serie bingewatcht.
-			<br>
-			<br>
+			</p>
+			<p>
 				We bezorgen tot aan je deur, zodat je kunt genieten van je Iced Latte of Caramel Frappuccino in de comfort van je eigen huis.
 			</p>
-			<button>Bestel nu</button>
-			<br>
-			<br>
+			<ul>
+				<li>
+					<a href="bestelnu.html">Bestel nu</a>
+				</li>
+			</ul>
 		</section>
 		<section>
 			<article>
 				<img class="img-starbuckssustainability" src="images/starbuckssustainability.jpeg" alt="Starbucks Sustainability">
 				<h3>Embracing sustainability</h3>
 				<p>Vanaf 1 juli 2023 brengen we kosten in rekening voor alle wegwerp items gemaakt van plastic. Go Green 💚</p>
-			  	<button>Ontdek meer</button>
+				<ul>
+					<li>
+						<a href="ontdekmeer.html">Ontdek meer</a>
+					</li>
+				</ul>
 			</article>
-			<br>
 			<article>
 				<img class="img-starbucksverhalen" src="images/starbucksverhalen.jpeg" alt="Starbucks Verhalen">
 				<h3>Starbucks Verhalen</h3>
 				<p>Blijf op de hoogte van onze laatste Starbucks verhalen en nieuws.</p>
-			  	<button>Ontdek meer</button>
+				<ul>
+					<li>
+						<a href="ontdekmeer.html">Ontdek meer</a>
+					</li>
+				</ul>
 			</article>
-			<br>
 			<article>
 				<img class="img-starbucksoverons" src="images/starbucksoverons(1).png" alt="Starbucks Over Ons">
 				<h3>Over ons</h3>
 				<p>Ontdek meer over ons bedrijf en geschiedenis.</p>
-			  	<button>Ontdek meer</button>
+				<ul>
+					<li>
+						<a href="ontdekmeer.html">Ontdek meer</a>
+					</li>
+				</ul>
 			</article>
-			<br>
 			<article>
 				<img class="img-starbucksbezorgd" src="images/starbucksbezorgd(1).png" alt="Starbucks Bezorgd">
 				<h3>Starbucks® Bezorgd</h3>
 				<p>Genieten van je favoriete Starbucks® drankjes vanuit het comfort van je huis is dichterbij dan je zou denken. Het is de koffie die je kent en waar je van houdt, in je favoriete mok. Kijk of bezorging bij jou in de buurt mogelijk is. Start je bestelling om je Starbucks® favorieten te laten bezorgen via Uber Eats en Thuisbezorgd.</p>
-			  	<button>Bestel nu</button>
+				<ul>
+					<li>
+						<a href="bestelnu.html">Bestel nu</a>
+					</li>
+				</ul>
 			</article>
 		</section>
 	</main>
 	<footer>
 		<section>
-			<ul>
-				<h2>Over ons</h2>
-				<li>
-					<a href="overons.html">Over ons</a>
-				</li>
-				<li>
-					<a href="onzekoffies.html">Onze koffies</a>
-				</li>
-				<li>
-					<a href="starbucksverhalen&nieuws.html">Starbucks Verhalen & Nieuws</a>
-				</li>
-				<li>
-					<a href="starbucksreadytodrink.html">Starbucks Ready to Drink</a>
-				</li>
-				<li>
-					<a href="zuivelalternatieven.html">Zuivelalternatieven</a>
-				</li>
-			</ul>
+			<h2>Over ons</h2>
+				<ul>
+					<li>
+						<a href="overons.html">Over ons</a>
+					</li>
+					<li>
+						<a href="onzekoffies.html">Onze koffies</a>
+					</li>
+					<li>
+						<a href="starbucksverhalen&nieuws.html">Starbucks Verhalen & Nieuws</a>
+					</li>
+					<li>
+						<a href="starbucksreadytodrink.html">Starbucks Ready to Drink</a>
+					</li>
+					<li>
+						<a href="zuivelalternatieven.html">Zuivelalternatieven</a>
+					</li>
+				</ul>
 		</section>
 		<section>
-			<ul>
-				<h2>Contact</h2>
-				<li>
-					<a href="werkenbijstarbucks.html">Werken bij Starbucks</a>
-				</li>
-				<li>
-					<a href="contact.html">Contact</a>
-				</li>
-			</ul>
+			<h2>Contact</h2>
+				<ul>
+					<li>
+						<a href="werkenbijstarbucks.html">Werken bij Starbucks</a>
+					</li>
+					<li>
+						<a href="contact.html">Contact</a>
+					</li>
+				</ul>
 		</section>
 		<section>
-			<ul>
-				<h2>Sociale Impact</h2>
-				<li>
-					<a href="verantwoordelijkheid.html">Verantwoordelijkheid</a>
-				</li>
-				<li>
-					<a href="embracingsustainability.html">Embracing Sustainability</a>
-				</li>
-			</ul>
+			<h2>Sociale Impact</h2>
+				<ul>
+					<li>
+						<a href="verantwoordelijkheid.html">Verantwoordelijkheid</a>
+					</li>
+					<li>
+						<a href="embracingsustainability.html">Embracing Sustainability</a>
+					</li>
+				</ul>
 		</section>
 		<section>
 			<img class="img-facebook" src="images/facebooklogo.png" alt="Facebook">
