--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
 	
 	<main>
 		<section>
+			<h2 class="geefstarbuckscadeau">Geef Starbucks Cadeau</h2>
 			<img class="img-geefstarbuckscadeau" src="images/geefstarbuckscadeau.png" alt="Geef Starbucks Cadeau">
 			<ul>
 				<li>
@@ -98,6 +99,7 @@
 			</ul>
 		</section>
 		<section>
+			<h3 class="embracingsustainability">Embracing sustainability</h3>
 			<article>
 				<img class="img-starbuckssustainability" src="images/starbuckssustainability.jpeg" alt="Starbucks Sustainability">
 				<h3>Embracing sustainability</h3>
@@ -184,11 +186,13 @@
 				</ul>
 		</section>
 		<section>
+			<h2 class="socialmedia">Social Media</h2>
 			<img class="img-facebook" src="images/facebooklogo.png" alt="Facebook">
 			<img class="img-instagram" src="images/instagram.png" alt="Instagram">
 			<img class="img-tiktok" src="images/tiktok.png" alt="Tiktok">
 		</section>
 		<section>
+			<h3 class="regels">Regels</h3>
 			<p>Privacy Policy</p>
 			<p>Terms of Use</p>
 			<p>Cookie Policy</p>
