--- a/menu.html
+++ b/menu.html
@@ -69,6 +69,7 @@
 			</p>
 		</section>
         <section>
+			<h3 class="ontdekonzedranken">Ontdek onze dranken</h3>
 			<article>
 				<img class="img-ontdekonzedranken.jpeg" src="images/ontdekonzedranken.jpeg" alt="Ontdek onze dranken">
 				<h3>Ontdek onze dranken</h3>
@@ -153,11 +154,13 @@
 				</ul>
 		</section>
         <section>
+			<h2 class="socialmedia">Social Media</h2>
 			<img class="img-facebook" src="images/facebooklogo.png" alt="Facebook">
 			<img class="img-instagram" src="images/instagram.png" alt="Instagram">
 			<img class="img-tiktok" src="images/tiktok.png" alt="Tiktok">
 		</section>
         <section>
+			<h3 class="regels">Regels</h3>
 			<p>Privacy Policy</p>
 			<p>Terms of Use</p>
 			<p>Cookie Policy</p>
